--- a/site.css
+++ b/site.css
@@ -1,4 +1,5 @@
 body, html {
+    position: relative;
     height: 100%;
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
@@ -6,11 +7,10 @@ body, html {
 
 
 * {
-    display: flexbox;
+    
     box-sizing: border-box;
 
 }
-
 
 .topnav {
     position: relative;
@@ -44,6 +44,11 @@ body, html {
     cursor: pointer;
     text-decoration: underline;
 }
+
+.topnav-centered {
+    display: flex;
+}
+
 .topnav-centered a {
     float: none;
     position: absolute;
@@ -51,6 +56,8 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+
 
 .topnav-right {
     float: right;
@@ -259,20 +266,21 @@ input[type=submit]:hover {
     .column, input[type=submit] {
       width: 100%;
       margin-top: 0;
+      display: flex;
     }
 }
 
 @media screen and (max-width: 650px) {
     .column {
       width: 100%;
-      display: block;
+      display: flex;
     }
 }
 
 @media screen and (max-width: 600px) {
     .topnav a {
       float: none;
-      display: block;
+      display: flex;
     }
 }
 
